# mysql_vss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.h.in  dev.sh  example.mysql_vss_config.ini  mysql_vss.cc  vss_search.cc
example/: Dockerfile  README.md  app.py  docker-entrypoint.sh  embedding_util.py  example_init.sql  mysql_vss_config.ini  requirements.txt  seed_data.sql
include/: annoy_service.h  mysql_vss.h
src/: annoy_service.cc  mysql_vss.cc  vss_search.cc  vss_update.cc  vss_version.cc
